--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="index, follow" />
+  <meta name="description" content="Raising Angel Techsolutions is your trusted store for solar panels, CCTV, smart home gadgets, inverters, and more in Nigeria. Get fast delivery and top support." />
+  <meta name="keywords" content="solar panels Nigeria, buy inverter, smart home gadgets, CCTV camera Okija, home automation Nigeria, Raising Angel Techsolutions" />
+  <meta name="author" content="Raising Angel Techsolutions" />
+  <link rel="canonical" href="https://yourdomain.com/index.html" />
+  <title>Raising Angel Techsolutions | Solar, CCTV & Tech Gadgets</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <!-- Social Sharing Preview -->
+  <meta property="og:title" content="Raising Angel Techsolutions - Solar, CCTV & Smart Gadgets" />
+  <meta property="og:description" content="Get top tech products delivered across Nigeria – solar panels, inverters, security, and more." />
+  <meta property="og:image" content="https://yourdomain.com/assets/og-thumbnail.jpg" />
+  <meta property="og:url" content="https://yourdomain.com/index.html" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <!-- Add your CSS and scripts below -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Raising Angel Techsolutions - Smart Security & Automation</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="shortcut icon" href="w20250309_205238.png" type="image/x-icon">
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+
 </head>
 <body>
     <!-- Add the preloader at the start of body -->
@@ -861,7 +879,7 @@
     <div class="package-grid">
         <div class="package-card">
             <div class="package-image">
-                <img src="oWhatsApp Image 2025-02-28 at 16.58.55_98ce0ffc.jpg" alt="CCTV Security System">
+                <img src="WhatsApp Image 2025-07-04 at 20.45.13_f588add8.jpg" alt="CCTV Security System">
             </div>
             <h3>CCTV Systems</h3>
             <p>High-definition surveillance with remote access</p>
@@ -1448,5 +1466,8 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 
+
+
+</script>
 </body>
 </html>
