--- a/index.html
+++ b/index.html
@@ -351,6 +351,25 @@
             </div>
         </div>  
 
+
+             <div class="portfolio-item" data-category="solar">
+            <div class="portfolio-image">
+                <img src="Droplets-CCTV-Pricing-and-cost-in-Port-Harcourt-wifi-ptz-channel-system-8-channel-cctv-artillery-gra.jpg" alt="Commercial Solar Installation">
+                <div class="portfolio-overlay">
+                    <div class="overlay-content">
+                        <h3>Commercial Solar Installation</h3>
+                        <p>20kW solar system for office complex</p>
+                        <div class="portfolio-badges">
+                            <span class="badge">Ibadan</span>
+                            <span class="badge">2024</span>
+                        </div>
+                        <button class="view-project-btn">
+                            <i class="fas fa-expand"></i> View Project
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Project 5 - Automation -->
         <div class="portfolio-item" data-category="automation">
             <div class="portfolio-image">
@@ -372,14 +391,24 @@
         </div>
 
         <!-- Project 6 - Security -->
-        <div class="portfolio-item portfolio-video" data-category="security">
-            <div class="video-container">
-                  <video controls src="WhatsApp Video 2025-07-06 at 20.32.42_dba6a7d3.mp4"></video>
-                    <source src="https://sample-videos.com/video123/mp
-                <button class="play-video-btn">
-                    <i class="fas fa-play"></i>
-                </button>
+                <div class="portfolio-item" data-category="security">
+            <div class="portfolio-image">
+                <img src="qWhatsApp Image 2025-02-28 at 16.58.56_22aed110.jpg" alt="Hotel Automation">
+                <!-- <div class="portfolio-overlay">
+                    <div class="overlay-content">
+                        <h3>Hotel Automation System</h3>
+                        <p>Smart room controls for luxury hotel</p>
+                        <div class="portfolio-badges">
+                            <span class="badge">Enugu</span>
+                            <span class="badge">2023</span>
+                        </div>
+                        <button class="view-project-btn">
+                            <i class="fas fa-expand"></i> View Case Study
+                        </button>
+                    </div>
+                </div> -->
             </div>
+        </div>
             <!-- <div class="portfolio-overlay">
                 <div class="overlay-content">
                     <h3>Residential Security</h3>
@@ -883,7 +912,7 @@
 
         <div class="package-card">
             <div class="package-image">
-                <img src="He9746ac177cb40e596ae13e58c2e0e7dE.jpg_720x720q50.avif" alt="Smart Door Locks">
+                <img src="v2436080822.jpg" alt="Smart Door Locks">
             </div>
             <h3>Smart Door Locks</h3>
             <p>Keyless entry with biometric security</p>
@@ -896,7 +925,7 @@
 
         <div class="package-card">
             <div class="package-image">
-                <img src="Droplets-CCTV-Pricing-and-cost-in-Port-Harcourt-wifi-ptz-channel-system-8-channel-cctv-artillery-gra.jpg" alt="Home Automation">
+                <img src="MW100A.webp" alt="Home Automation-Home Automation – tagged "smart switch" – Threecubes">
             </div>
             <h3>Home Automation</h3>
             <p>Control your home from anywhere</p>
